Revision history for {{$dist->name}}

{{$NEXT}}

2.23      2021-06-01 13:05:17 -0600
  - Updated my dists to latest
  - Added Archive::Libarchive
  - Added Archive::Libarchive::Extract
  - Added Archive::Libarchive::Peek
  - Added Archive::Libarchive::Unwrap
  - Added Alien::GSL
  - Added FFI::C::Stat
  - Added Test::Archive::Libarchive
  - Added Package::Checkpoint
  - Added File::Readbackwards
  - Added PPIx::DocumentName
  - Removed Archive::Libarchive::XS
  - Removed Archive::Libarchive::Any

2.22      2021-04-17 03:03:38 -0600
  - Updated my dists to latest
  - Remove FFI::TinyCC::Inline on macos
  - Remove WebService::DailyConnect

2.21      2021-03-27 09:21:28 -0600
  - Updated my dists to latest
  - Added Test2::Tools::Process
  - Remove Test::Exit

2.20      2021-03-20 04:56:40 -0600
  - Updated my dists to latest
  - Added FFI::Platypus::Declare
  - Added Alien::OpenSSL

2.19      2020-07-10 12:19:50 -0600
  - Updated my dists to latest
  - Remove deprecated module Module::Build::FFI
  - Remove deprecated module FFI::Util
  - Remove unused module Archive::Libarchive::FFI
  - Remove merged module Wasm::Hook
  - Added Const::Introspect::C
  - Added Clang::CastXML
  - Added Alien::castxml

2.18      2020-05-20 17:28:20 -0600
  - Updated my dists to latest
  - Removed deprecated WebService::Livejournal
  - Added Alien::libpcre

2.17      2020-05-14 19:26:28 -0400
  - Updated my dists to latest
  - Remove deprecated module Alien::nragent
  - Remove deprecated module NewRelic::Agent::FFI
  - Added Alien::libnewrelic
  - Added App::plasm
  - Added Devel::ebug
  - Added FFI::C
  - Added FFI::Platypus::Lang::Go
  - Added FFI::Platypus::Type::Enum
  - Added NewFangle
  - Added Test2::Tools::PerlCritic

2.16      2020-04-25 16:58:27 -0600
  - Updated my dists to latest
  - Added FFI::Platypus::Type::PtrObject

2.15      2020-04-20 13:17:00 -0600
  - Switched to EUMM