@@ -28,11 +28,12 @@ Alien::automake                                = 0.16
 Alien::Autotools                               = 1.05
 Alien::Base::ModuleBuild                       = 1.15
 Alien::bison                                   = 0.21
-Alien::Build                                   = 2.40
+Alien::Build                                   = 2.41
 Alien::Build::Git                              = 0.08
 Alien::Build::MB                               = 0.07
 Alien::Build::Plugin::Decode::SourceForge      = 0.02
 Alien::Build::Plugin::Download::GitHub         = 0.07
+Alien::Build::Plugin::Extract::Libarchive      = 0.01
 Alien::Build::Plugin::Fetch::Cache             = 0.04
 Alien::Build::Plugin::Probe::GnuWin32          = 0.59
 Alien::Build::Plugin::Probe::Override          = 0.03
@@ -64,7 +65,7 @@ Alien::libtool                                 = 0.14
 Alien::LibYAML                                 = 2.05
 Alien::Libxml2                                 = 0.17
 Alien::LZO                                     = 0.02
-Alien::m4                                      = 0.20
+Alien::m4                                      = 0.21
 Alien::MSYS                                    = 0.14
 Alien::nasm                                    = 0.22
 Alien::Nettle                                  = 0.05
@@ -97,8 +98,8 @@ App::supertouch                                = 0.02
 App::whichdll                                  = 0.03
 Archive::Ar::Libarchive                        = 2.08
 Archive::Libarchive                            = 0.04
-Archive::Libarchive::Extract                   = 0.02
-Archive::Libarchive::Peek                      = 0.02
+Archive::Libarchive::Extract                   = 0.03
+Archive::Libarchive::Peek                      = 0.03
 Archive::Libarchive::Unwrap                    = 0.01
 Browser::Start                                 = 0.01
 Clang::CastXML                                 = 0.02
@@ -106,7 +107,7 @@ Class::Inspector                               = 1.36
 Const::Introspect::C                           = 0.01
 Devel::ebug                                    = 0.63
 Dist::Zilla::App::Command::aliendeps           = 0.03
-Dist::Zilla::Plugin::AlienBuild                = 0.31
+Dist::Zilla::Plugin::AlienBuild                = 0.32
 Dist::Zilla::Plugin::Alt                       = 0.08
 Dist::Zilla::Plugin::CommentOut                = 0.05
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
@@ -117,7 +118,7 @@ Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.21
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.64
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.66
 Env::ShellWords                                = 0.02
 Exception::Class::DBI                          = 1.04
 FFI                                            = 1.15
@@ -125,7 +126,7 @@ FFI::C                                         = 0.10
 FFI::C::Stat                                   = 0.02
 FFI::CheckLib                                  = 0.28
 FFI::ExtractSymbols                            = 0.05
-FFI::Platypus                                  = 1.43
+FFI::Platypus                                  = 1.46
 FFI::Platypus::Declare                         = 1.34
 FFI::Platypus::Lang::CPP                       = 0.05
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
@@ -135,7 +136,7 @@ FFI::Platypus::Lang::Pascal                    = 0.09
 FFI::Platypus::Lang::Rust                      = 0.09
 FFI::Platypus::Legacy::Raw                     = 0.06
 FFI::Platypus::Record::StringArray             = 0.01
-FFI::Platypus::Type::Enum                      = 0.05
+FFI::Platypus::Type::Enum                      = 0.06
 FFI::Platypus::Type::PtrObject                 = 0.03
 FFI::TinyCC                                    = 0.30
 FFI::TinyCC::Inline                            = 0.28
@@ -158,6 +159,7 @@ Photography::DX                                = 0.02
 Photography::EV                                = 0.07
 PkgConfig                                      = 0.25026
 PkgConfig::LibPkgConf                          = 0.11
+Pod::Simple::Words                             = 0.07
 PPIx::DocumentName                             = 1.01
 Shell::Config::Generate                        = 0.34
 Shell::Guess                                   = 0.09
@@ -165,19 +167,20 @@ String::Template                               = 0.21
 Term::Clui                                     = 1.76
 Term::EditLine                                 = 0.11
 Test::Alien::CPP                               = 1.02
-Test::Archive::Libarchive                      = 0.01
+Test::Archive::Libarchive                      = 0.02
 Test::CChecker                                 = 0.10
 Test::Fixme                                    = 0.16
 Test::Script                                   = 1.29
 Test::Version                                  = 2.09
 Test2::Plugin::FauxHomeDir                     = 0.06
-Test2::Tools::FFI                              = 0.05
+Test2::Tools::FFI                              = 0.06
 Test2::Tools::HTTP                             = 0.09
 Test2::Tools::HTTP::UA::Mojo                   = 0.04
 Test2::Tools::JSON::Pointer                    = 0.02
 Test2::Tools::PerlCritic                       = 0.04
 Test2::Tools::Process                          = 0.05
 Test2::Tools::URL                              = 0.06
+Text::HumanComputerWords                       = 0.04
 Text::Hunspell::FFI                            = 0.04
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.10
